<resources>
    <string name="app_name">App de notícias ADM</string>

    <string name="title_Home">Escreva uma notícia</string>
    <string name="hint_title">Título</string>
    <string name="hint_news">Escreva sua notícia</string>
    <string name="hint_date">Data de publicação</string>
    <string name="hint_writer">Autor</string>

    <string name="btn_sendNews">Publicar</string>

</resources>