<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_Home"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="22dp"
    />
    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginHorizontal="20dp"

        android:maxLines="1"
        android:hint="@string/hint_title"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/custom_edit_text"
        />

    <EditText
        android:id="@+id/editNews"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginHorizontal="20dp"

        android:inputType="textMultiLine"
        android:hint="@string/hint_news"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:gravity="start"
        android:background="@drawable/custom_edit_text"
        />
    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginHorizontal="20dp"

        android:maxLength="10"
        android:hint="@string/hint_date"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:gravity="start"
        android:background="@drawable/custom_edit_text"
        />
    <EditText
        android:id="@+id/editWriter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_marginHorizontal="20dp"

        android:maxLines="1"
        android:hint="@string/hint_writer"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:gravity="start"
        android:background="@drawable/custom_edit_text"
        />

    <Button
        android:id="@+id/btnSendNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="20dp"
        android:backgroundTint="@color/orange"
        android:padding="15dp"
        android:text="@string/btn_sendNews"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>

</ScrollView>